[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1_script"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.02, 0.12, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Settings"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 450.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="MasterVolume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MasterVolume"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
text = "Master Volume"

[node name="Slider" type="HSlider" parent="VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="FullscreenToggle" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/FullscreenToggle"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
text = "Fullscreen"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/FullscreenToggle"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "Back"
